# gsee

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  conda_create.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
gsee/: __init__.py  brl_model.py  pv.py  trigon.py
gsee/climatedata_interface/: __init__.py  generate_pdfs.py  interface.py  kt_h_sinusfunc.pyx  pre_gsee_processing.py  util.py
gsee/test/: test_climatedata_interface.py  test_pre_gsee_processing.py  test_trigon.py
