[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,dist,docs

[metadata]
author = ZUoS Ltd
author_email = info@zuos.co.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
description = GSEE: Global Solar Energy Estimator
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
name = gsee-redux
project_urls =
    Repository = https://github.com/scene-connect/gsee-redux
url=https://github.com/scene-connect/gsee-redux
version = 1.0

[options]
include_package_data = True
install_requires = 
    joblib >= 0.12
    numpy >= 1.15.0
    pandas >= 1.0
    pvlib >= 0.6.3
    pyephem >= 3.7.6
    scipy >= 1.1.0
    xarray[parallel] >= 0.16
packages = find:
python_requires = >= 3
zip_safe = False

[options.extras_require]
generate_pdfs =
    basemap >= 1.1.0
    seaborn >= 0.9.0
